View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0028213 | Open CASCADE | OCCT:Visualization | public | 2016-12-12 12:51 | 2017-09-29 16:31 |
Reporter | kgv | Assigned To | apn | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.1.0 | ||||
Target Version | 7.2.0 | Fixed in Version | 7.2.0 | ||
Summary | 0028213: Visualization, StdPrs_ShadedShape - compute face edges for triangulation-only Faces | ||||
Description | The StdPrs_ShadedShape::FillFaceBoundaries() implementation should be extended to handle Faces without Edges defined (triangulation-only). | ||||
Steps To Reproduce | test bugs vis bug27821 1 | ||||
Tags | No tags attached. | ||||
Test case number | bugs vis bug27821 | ||||
|
Branch CR28213 has been created by kgv. SHA-1: d832ba0ffcd953a9a75a5ade15adfda4a5104cb1 Detailed log of new commits: Author: kgv Date: Mon Dec 12 12:54:25 2016 +0300 0028213: Visualization, StdPrs_ShadedShape - compute face edges for triangulation-only Faces |
|
Patch is ready for review. |
|
Branch CR28213 has been updated forcibly by kgv. SHA-1: cf1c1208d08e9052e639323e881c3142b1cf97e6 |
|
Branch CR28213 has been updated forcibly by kgv. SHA-1: adb69cbcfbfd65a24556f4060aa70a9019e863bd |
|
Branch CR28213 reviewed without remarks, ready for testing. |
|
Dear BugMaster, Branch CR28213 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: adb69cbcfbfd65a24556f4060aa70a9019e863bd Number of compiler warnings: occt component : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) products component : Linux: 63 (63 on master) Windows: 0 (0 on master) MacOS : 1146 Regressions/Differences/Improvements: No regressions/differences Testing cases: http://occt-tests/CR28213-master-OCCT/Debian70-64/bugs/vis/bug27821.html http://occt-tests/CR28213-master-OCCT/Windows-64-VC10/bugs/vis/bug27821.html bugs vis bug27821: OK Testing on Linux: occt component : Total MEMORY difference: 92877240 / 92751958 [+0.14%] Total CPU difference: 21492.030000000206 / 21420.310000000274 [+0.33%] products component : Total MEMORY difference: 30131204 / 30095445 [+0.12%] Total CPU difference: 5344.3699999999735 / 5303.47999999998 [+0.77%] Testing on Windows: occt component : Total MEMORY difference: 58455723 / 58462136 [-0.01%] Total CPU difference: 20074.676682998528 / 20176.91973839851 [-0.51%] products component : Total MEMORY difference: 20893065 / 20859840 [+0.16%] Total CPU difference: 5294.081136199971 / 5125.865257899959 [+3.28%] There are following differences in images found by testdiff. http://occt-tests/CR28213-master-OCCT/Debian70-64/diff-Debian70-64.html http://occt-tests/CR28213-master-OCCT/Windows-64-VC10/diff-Windows-64-VC10-image.html IMAGE bugs vis bug27821: bug27821.png differs |
|
Dear kgv, Branch CR28213 has been rejected due to: - differences in images |
|
The image difference is expected (checks that patch has effect). |
|
Dear BugMaster, Branch CR28213 is TESTED. |
|
Branch CR28213 has been deleted by kgv. SHA-1: adb69cbcfbfd65a24556f4060aa70a9019e863bd |
occt: master 0a863061 2016-12-12 09:54:25 Committer: apn Details Diff |
0028213: Visualization, StdPrs_ShadedShape - compute face edges for triangulation-only Faces |
Affected Issues 0028213 |
|
mod - src/StdPrs/StdPrs_ShadedShape.cxx | Diff File | ||
mod - src/StdPrs/StdPrs_WFShape.cxx | Diff File | ||
mod - src/StdPrs/StdPrs_WFShape.hxx | Diff File | ||
mod - tests/bugs/vis/bug27821 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-12-12 12:51 | kgv | New Issue | |
2016-12-12 12:51 | kgv | Assigned To | => kgv |
2016-12-12 12:55 | git | Note Added: 0061565 | |
2016-12-12 12:56 | kgv | Note Added: 0061566 | |
2016-12-12 12:56 | kgv | Assigned To | kgv => san |
2016-12-12 12:56 | kgv | Status | new => resolved |
2016-12-12 12:56 | kgv | Steps to Reproduce Updated | |
2016-12-13 09:57 | git | Note Added: 0061593 | |
2016-12-13 09:59 | git | Note Added: 0061594 | |
2016-12-13 10:00 |
|
Note Added: 0061595 | |
2016-12-13 10:00 |
|
Assigned To | san => bugmaster |
2016-12-13 10:00 |
|
Status | resolved => reviewed |
2016-12-13 10:46 |
|
Assigned To | bugmaster => mkv |
2016-12-13 19:43 |
|
Note Added: 0061630 | |
2016-12-13 19:44 |
|
Note Edited: 0061630 | |
2016-12-13 19:44 |
|
Note Added: 0061631 | |
2016-12-13 19:44 |
|
Assigned To | mkv => kgv |
2016-12-13 19:44 |
|
Status | reviewed => feedback |
2016-12-13 19:44 |
|
Test case number | => bugs vis bug27821 |
2016-12-13 19:47 | kgv | Note Added: 0061632 | |
2016-12-13 19:47 | kgv | Assigned To | kgv => bugmaster |
2016-12-15 12:16 |
|
Note Added: 0061689 | |
2016-12-15 12:16 |
|
Status | feedback => tested |
2016-12-16 16:34 | apn | Changeset attached | => occt master 0a863061 |
2016-12-16 16:34 | apn | Assigned To | bugmaster => apn |
2016-12-16 16:34 | apn | Status | tested => verified |
2016-12-16 16:34 | apn | Resolution | open => fixed |
2016-12-18 10:53 | git | Note Added: 0061816 | |
2017-09-29 16:21 |
|
Fixed in Version | => 7.2.0 |
2017-09-29 16:31 |
|
Status | verified => closed |