0028213: Visualization, StdPrs_ShadedShape - compute face edges for triangulation-only Faces